Auther Name Edited

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- Made By Prathamesh Thorat -->
+<!--
+Name = Find & Replace
+Auther = Pratahmesh Thorat
+Used Language = HTML , CSS , JS
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
